# flutter_burn

./: .gitignore  README.md  cargo.sh  flutter_launcher_icons.yaml  flutter_native_splash.yaml  local_build.sh  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/nl/porculusniger/mnist_burn/: MainActivity.kt
android/app/src/main/res/values-night-v31/: styles.xml
android/app/src/main/res/values-v31/: styles.xml
assets/: gray_icon.xcf  logo.xcf  logo1024.xcf  logo240.xcf  logo720.xcf  splashscreen.xcf
create_mnist_burn_model/: Cargo.toml  eight.raw  five.raw  four.raw  seven.raw  three.raw
create_mnist_burn_model/src/: .rustc_info.json  inference.rs  lib.rs  predictor.rs
lib/: app.dart  exports.dart  gen_api.dart  init.dart  main.dart
lib/controllers/: number_controllers.dart
lib/functions/: helpers.dart
lib/screens/: inference_landscape.dart  inference_portrait.dart
lib/widgets/: number_painter.dart
linux/: CMakeLists.txt  my_application.cc
local/: pubspec.yaml
native/: Cargo.toml  build.rs
native/src/: api.rs  gen_api.io.rs  gen_api.rs  lib.rs  model.rs  predictor.rs  training.rs
